Add LoT to known_reminders

--- a/src/botc_tokens/data/known_reminders.json
+++ b/src/botc_tokens/data/known_reminders.json
@@ -85,6 +85,7 @@
  "Librarian": ["OUTSIDER", "WRONG"],
  "Lil' Monsta": ["Lil' Monsta", "DEAD"],
  "Lleech": ["POISONED", "DEAD"],
+ "Lord Of Typhon": ["DEAD"],
  "Lunatic": ["CHOSEN", "CHOSEN", "CHOSEN"],
  "Lycanthrope": ["DEAD"],
  "Magician": [],
