Update known_reminders.json to match official app
Acrobat, Balloonist, Cannibal, Goblin, Lycanthrope, and Organ Grinder
have different reminder tokens on the official app to the current
hard-coded list, mainly due to character reworks. This commit brings
them in line with the current official token sets.

--- a/src/botc_tokens/data/known_reminders.json
+++ b/src/botc_tokens/data/known_reminders.json
@@ -1,5 +1,5 @@
 {
- "Acrobat": ["DEAD"],
+ "Acrobat": ["DEAD", "CHOSEN"],
  "Al-Hadikhia": ["1", "2", "3"],
  "Alchemist": ["IS THE ALCHEMIST"],
  "Amnesiac": ["?", "?", "?"],
@@ -8,7 +8,7 @@
  "Artist": ["NO ABILITY"],
  "Assassin": ["DEAD", "NO ABILITY"],
  "Atheist": [],
- "Balloonist": ["TOWNSFOLK", "OUTSIDER", "MINION", "DEMON"],
+ "Balloonist": ["KNOWN"],
  "Banshee": ["HAS ABILITY"],
  "Barber": ["HAIRCUTS TONIGHT"],
  "Barista": ["SOBER AND HEALTHY", "ACTS TWICE"],
@@ -23,7 +23,7 @@
  "Bureaucrat": ["3 VOTES"],
  "Butcher": [],
  "Butler": ["MASTER"],
- "Cannibal": ["POISONED", "DIED TODAY"],
+ "Cannibal": ["POISONED", "LUNCH"],
  "Cerenovus": ["MAD"],
  "Chambermaid": [],
  "Chef": [],
@@ -57,7 +57,7 @@
  "Gangster": [],
  "Gardener": [],
  "General": [],
- "Goblin": [],
+ "Goblin": ["CLAIMED"],
  "Godfather": ["DEAD", "DIED TODAY"],
  "Golem": ["MAY NOT NOMINATE"],
  "Goon": ["DRUNK"],
@@ -87,7 +87,7 @@
  "Lleech": ["POISONED", "DEAD"],
  "Lord Of Typhon": ["DEAD"],
  "Lunatic": ["CHOSEN", "CHOSEN", "CHOSEN"],
- "Lycanthrope": ["DEAD"],
+ "Lycanthrope": ["DEAD", "FAUX PAW"],
  "Magician": [],
  "Marionette": ["IS THE MARIONETTE"],
  "Mastermind": [],
@@ -104,7 +104,7 @@
  "Noble": ["KNOW", "KNOW", "KNOW"],
  "Ojo": ["DEAD"],
  "Oracle": [],
- "Organ Grinder": ["ABOUT TO DIE"],
+ "Organ Grinder": ["ABOUT TO DIE", "DRUNK"],
  "Pacifist": [],
  "Philosopher": ["IS THE PHILOSOPHER", "DRUNK"],
  "Pit-Hag": [],
