Pull official tokens from wiki if used in bloodstar json

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
 ## Project Specific ##
 __version__.py
 inputs
-!example/inputs/
 tokens
-!example/tokens/
 printables
-!example/printables/
+bugs
 
 ## MacOS ##
 # General
